--- a/Gapminder-hw01.Rmd
+++ b/Gapminder-hw01.Rmd
@@ -1,36 +1,30 @@
 ---
-title: "RMarkdown-hw01"
-output: 
-  github_document 
-    keep_md: yes
+title: "Gapminder-hw01"
+author: "Aisha Uduman"
+date: "9/18/2017"
+output: html_document
 ---
-
-
-
-```{r}
-plot (lifeExp ~ year, gapminder)
-```
-
-```{r}
-p <- ggplot(filter(gapminder, country == "Chile"),
-            aes(x = year, y = gdpPercap))
-p <- p + scale_x_log10()
-p + geom_point()
-```
-
-```{r}
-str(gapminder$country)
-```
-
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+## R Markdown
 
+This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
+```{r cars}
+summary(cars)
+```
 
+## Including Plots
 
+You can also embed plots, for example:
 
+```{r pressure, echo=FALSE}
+plot(pressure)
+```
+
+Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
