added plot of Chile gdp per capita over time, added plot of Vietnam gdp per capita vs life exp

--- a/Gapminder-hw01.Rmd
+++ b/Gapminder-hw01.Rmd
@@ -7,26 +7,41 @@ output:
     keep_md: true
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+#R Markdown for Homework 1 
+
+Exploring gapminder. 
+
+- Polish and extend R Markdown doc from Sept 14 class 
+- Render it to the github_document output format
+- Commit both .Rmd and .md files and push them to Github
+
+
+
+```{r}
+p <- ggplot(filter(gapminder, continent != "Oceania"),
+            aes(x = gdpPercap, y = lifeExp)) # just initializes
+p <- p + scale_x_log10() # log the x axis the right way
+p + geom_point()
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+table(gapminder$continent)
+barplot(table(gapminder$continent))
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+p <- ggplot(filter(gapminder, country == "Chile"),
+            aes(x = gdpPercap, y = year)) # just initializes
+p <- p + scale_x_log10() # log the x axis the right way
+p + geom_point()
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+```{r}
+p <- ggplot(filter(gapminder, country == "Vietnam"),
+            aes(x = gdpPercap, y = lifeExp)) # just initializes
+p <- p + scale_x_log10() # log the x axis the right way
+p + geom_point()
+```
+
+
