--- a/Gapminder-hw01.Rmd
+++ b/Gapminder-hw01.Rmd
@@ -2,9 +2,10 @@
 title: "Gapminder-hw01"
 author: "Aisha Uduman"
 date: "9/18/2017"
-output: 
-  html_document: 
-    keep_md: true
+output:
+  html_document: default
+  github_document:
+    keep_md: yes
 ---
 
 #R Markdown for Homework 1 
