--- a/Gapminder-hw01.Rmd
+++ b/Gapminder-hw01.Rmd
@@ -3,9 +3,9 @@ title: "Gapminder-hw01"
 author: "Aisha Uduman"
 date: "9/18/2017"
 output:
-  html_document: default
   github_document:
     keep_md: yes
+  html_document: default
 ---
 
 #R Markdown for Homework 1 
@@ -16,6 +16,12 @@ Exploring gapminder.
 - Render it to the github_document output format
 - Commit both .Rmd and .md files and push them to Github
 
+
+install.packages("gapminder")
+install.packages("tidyverse")
+
+library(gapminder)
+library(tidyverse)
 
 
 ```{r}
