--- a/Gapminder-hw01.Rmd
+++ b/Gapminder-hw01.Rmd
@@ -2,10 +2,7 @@
 title: "Gapminder-hw01"
 author: "Aisha Uduman"
 date: "9/18/2017"
-output:
-  html_document: default
-  github_document:
-    keep_md: yes
+output: github_document
 ---
 
 #R Markdown for Homework 1 
